# idf_component

./: README.md
libfvad/: CMakeLists.txt  fvad.c
miot/: CMakeLists.txt  miot_cloud.c  miot_cloud.h
xmiot/: CMakeLists.txt  xmiot_account.c  xmiot_account.h  xmiot_cacert.c  xmiot_cacert.h  xmiot_crypto.c  xmiot_crypto.h  xmiot_service.c  xmiot_service.h
yos/: CMakeLists.txt  yos_uri.c
yos/include/: yos_http.h  yos_httpd.h  yos_mqtt.h  yos_nvs.h  yos_sys.h  yos_uri.h  yos_wifi.h
yos/src_esp/: yos_http.c  yos_httpd.c  yos_mqtt.c  yos_nvs.c  yos_sys.c  yos_wifi.c
yos/src_win32/: yos_http.c  yos_httpd.c  yos_mqtt.c  yos_nvs.c  yos_sys.c  yos_wifi.c
